ZORP_H = zorpconfig.h \
	modules.h policy.h proxy.h proxystack.h \
	pyproxy.h \
	nfdynexpect-kernel.h\
	dimhash.h zorp.h \
	pysockaddr.h pystream.h \
	pycore.h \
	authprovider.h \
	tpsocket.h \
	szig.h \
	dispatch.h pydispatch.h attach.h connection.h pyattach.h \
	plugsession.h zpython.h \
	dgram.h pystruct.h pydict.h \
	ifmonitor.h proxygroup.h pyproxygroup.h \
	coredump.h \
	proxyssl.h proxysslhostiface.h proxycommon.h pyx509.h \
	kzorp.h kzorp-kernel.h \
	certchain.h pyx509chain.h \
	session.h session_impl.h \
	alerting.h sessionid.h


pkgincludedir=$(includedir)/zorp
pkginclude_HEADERS = $(ZORP_H)
