
pkgdatadir = @ZORP_PYTHON_DIR@

pkgdata_DATA = Auth.py AuthDB.py Base.py Core.py Chainer.py Common.py \
	Dispatch.py Subnet.py Listener.py Matcher.py NAT.py \
	Proxy.py Router.py Receiver.py Service.py Session.py \
	SockAddr.py Stream.py Zone.py Zorp.py __init__.py \
	Globals.py Cache.py Resolver.py Stack.py Config.py \
	KZorp.py Keybridge.py \
	Pssl.py Util.py Rule.py Exceptions.py \
	Encryption.py Detector.py \
	Instance.py InstancesConf.py \
	ResolverCache.py FileLock.py

EXTRA_DIST = $(pkgdata_DATA)
